[build-system]
requires = ["hatchling"]  # Hatchling is the build tool
build-backend = "hatchling.build"

[project]
name = "rotational_placement"
version = "0.0.3"
description = "A package for generating and plotting rotational placement data"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Academic Free License (AFL)" }

authors = [
  { name="ingwehr", email="backlund.hugo@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Academic Free License (AFL)",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Ingwehr/RotationalPlacementPackage/settings"

[tool.hatch.version]
path = "src/rotational_placement/__init__.py"

[tool.hatch.build]
packages = ["rotational_placement"]
